fix favicon not showing, add spacing between GH and LI icons in team section, minor style edits to content

--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,4 @@ theme = 'hyde'
 [params]
   description = 'Artemis is an open source, serverless framework for scalable load testing of your APIs.'
   themeColor = "theme-base-0g"
+  favicon = "img/favicon.png"
